fixed contrast issues

--- a/src/components/Creation/Creation.css
+++ b/src/components/Creation/Creation.css
@@ -9,7 +9,7 @@
     border-radius: 10px;
     width: 90%;
     margin: 5px;
-    background-color: rgb(49, 146, 179);
+    background-color: rgb(40, 123, 151);
     color: white;
     max-width: 500px;
 }
