--- a/src/routes/CreatePage/CreatePage.css
+++ b/src/routes/CreatePage/CreatePage.css
@@ -7,7 +7,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: rgb(49, 146, 179);
+    background-color: rgb(40, 123, 151);
     border-radius: 10px;
     margin: 10px;
     padding: 20px;
@@ -18,7 +18,7 @@
 }
 
 .directions {
-    background-color: rgb(49, 146, 179);
+    background-color: rgb(40, 123, 151);
     border-radius: 10px;
     padding: 5px; 
     width: 80%;
@@ -43,7 +43,7 @@ h3 {
     width: 200px;
     height: 50px;
     border-radius: 15px;
-    background-color: rgb(49, 146, 179);
+    background-color: rgb(40, 123, 151);
 }
 
 
