--- a/src/routes/FinalPage/FinalPage.css
+++ b/src/routes/FinalPage/FinalPage.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column-reverse;
     justify-content: center;
-    background-color: rgb(49, 146, 179);
+    background-color: rgb(40, 123, 151);
     border-radius: 10px;
     max-width: 500px;
     margin-left: auto;
