--- a/src/routes/LandingPage/LandingPage.css
+++ b/src/routes/LandingPage/LandingPage.css
@@ -1,5 +1,5 @@
 .about-app {
-    background-color: rgb(49, 146, 179);
+    background-color: rgb(40, 123, 151);
     border-radius: 10px;
     width: 80%;
     max-width: 500px;
